crates/nirvash-macros/tests/fixtures/registered_invariant_closure_reject.stderr
error: registered state predicates must be AST-native; use nirvash_expr! instead of BoolExpr::new(...)
  --> tests/fixtures/registered_invariant_closure_reject.rs:37:55
   |
37 |   fn bad_invariant() -> ::nirvash_core::BoolExpr<State> {
   |  _______________________________________________________^
38 | |     ::nirvash_core::BoolExpr::new("bad_invariant", |_| true)
39 | | }
   | |_^
